--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,101 @@
-.App {
+.hero .wrapper {
+  font-size: 25px;
   text-align: center;
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 145px;
+  flex-wrap: wrap;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.wrapper__left {
+  margin-top: 105px;
+  max-width: 605px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+h1 {
+  font-size: 80px;
+
+  margin: 0;
+  line-height: 84px;
+}
+
+.wrapper__left p {
+  line-height: 39px;
+  letter-spacing: -0.66px;
+  margin-top: 24px;
+}
+
+.wrapper__left .action-btn {
+  margin-top: 30px;
+}
+
+.wrapper__left .action-btn img {
+  margin-left: 8px;
+}
+
+.hero__box {
+  overflow: hidden;
+  animation: hero-animate 5s infinite alternate;
+}
+
+@keyframes hero-animate {
+  0% {
+    border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+  }
+  40% {
+    border-radius: 73% 27% 81% 19% / 19% 73% 27% 81%;
+  }
+  60% {
+    border-radius: 81% 19% 50% 50% / 43% 86% 14% 57%;
+  }
+
+  100% {
+    border-radius: 57% 43% 43% 57% / 62% 54% 46% 38%;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+@media screen and (max-width: 558px) {
+  .hero .wrapper {
+    margin-top: 0;
+  }
+}
+
+.contact_container {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  margin-top: 15px;
+  top: 0;
+  bottom: 0;
+  transform: translate(0%, 30%);
+}
+.contact_container h2 {
+  font-size: 35px;
 }
 
-.App-link {
-  color: #61dafb;
+.contact_block {
+  display: flex;
+  width: 300px;
+  justify-content: space-around;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.contact_block a img {
+  width: 45px;
+  margin-right: 10px;
+}
+
+.contact_container__desc {
+  width: 400px;
+  font-size: 18px;
+}
+.about_title {
+  margin: 0 auto;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.skill_block p {
+  text-align: center;
+  font-size: 18px;
 }
